--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
+    "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,15 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-	"technolibs": "1.1.0",
+    "technolibs": "1.1.0",
     "json-schema-mock": "0.0.8",
-	"techno-gendoc": "0.4.1"
+    "techno-gendoc": "0.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0"
   }
 }
