--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "node test.js",
     "lint": "./node_modules/.bin/eslint **/*.js"
   },
   "repository": {
