--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-<<<<<<< HEAD
-    "test": "node test.js",
-    "lint": "./node_modules/.bin/eslint **/*.js"
-
-=======
     "test": "karma start --single-run",
     "lint": "./node_modules/.bin/eslint public/components/**/*.js",
     "fest": "./node_modules/.bin/fest-build --dir=public/components/",
     "karma:start": "karma start",
     "karma:run": "karma run",
     "start": "node server.js"
->>>>>>> sample/lesson-5
   },
   "repository": {
     "type": "git",
@@ -38,7 +32,7 @@
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0"
+    "eslint-plugin-react": "^6.3.0",
     "fest": "^0.12.1",
     "jasmine": "^2.5.2",
     "karma": "1.3.0",
