--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "fest": "^0.12.1",
     "jasmine": "^2.5.2",
     "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2"
   }
