--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "karma start --single-run",
+    //"test": "karma start --single-run",
     "lint": "./node_modules/.bin/eslint public/components/**/*.js",
     "fest": "./node_modules/.bin/fest-build --dir=public/components/",
-    "karma:start": "karma start",
-    "karma:run": "karma run",
+    //"karma:start": "karma start",
+    //"karma:run": "karma run",
     "start": "node server.js"
   },
   "repository": {
