--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jasmine": "^2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2"
   }
