--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "karma": "1.3.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "websocket": "^1.0.4",
+    "node-gyp": "^3.4.0"
   }
 }
